--- a/eng/pipelines/templates/stages/archetype-python-release.yml
+++ b/eng/pipelines/templates/stages/archetype-python-release.yml
@@ -243,6 +243,7 @@ stages:
         - template: /eng/pipelines/templates/jobs/smoke-test.yml
           parameters:
             Nightly: false
+            ArtifactName: ${{ parameters.ArtifactName }}
             Artifacts: ${{ parameters.Artifacts }}
 
   - stage: Integration
