--- a/eng/pipelines/templates/jobs/smoke-test.yml
+++ b/eng/pipelines/templates/jobs/smoke-test.yml
@@ -1,5 +1,5 @@
 parameters:
-  - name: Nightly
+  - name: Daily
     default: true
   - name: Artifacts
     type: object
@@ -9,7 +9,7 @@ parameters:
     default: "not-specified"
 
 jobs:
-  - ${{ if eq(parameters.Nightly, false) }}:
+  - ${{ if eq(parameters.Daily, false) }}:
     - job: smoke_test_eligibility
       displayName: Check Smoke Test Eligibility
       steps:
@@ -32,7 +32,7 @@ jobs:
             RunSmokeTests: $(RunSmokeTests)
 
   - job:
-    ${{ if eq(parameters.Nightly, false) }}:
+    ${{ if eq(parameters.Daily, false) }}:
       dependsOn: smoke_test_eligibility
       condition: and(succeeded(), eq(dependencies.smoke_test_eligibility.outputs['output_eligibility.RunSmokeTests'], true))
     strategy:
@@ -116,9 +116,9 @@ jobs:
       - name: azureChinaCloudArmParameters
         value: "@{ storageEndpointSuffix = 'core.chinacloudapi.cn'; azureCloud = 'AzureChinaCloud'; }"
       - name: requirements
-        ${{ if eq(parameters.Nightly, true) }}:
+        ${{ if eq(parameters.Daily, true) }}:
           value: $(Build.SourcesDirectory)/common/smoketest/requirements.txt
-        ${{ if eq(parameters.Nightly, false) }}:
+        ${{ if eq(parameters.Daily, false) }}:
           value: $(Build.SourcesDirectory)/common/smoketest/requirements-release.txt
 
     steps:
@@ -132,7 +132,7 @@ jobs:
           pip --version
         displayName: pip --version
 
-      - ${{ if eq(parameters.Nightly, true) }}:
+      - ${{ if eq(parameters.Daily, false) }}:
         - download: current
           artifact: ${{ parameters.ArtifactName }}
           timeoutInMinutes: 5
@@ -163,17 +163,17 @@ jobs:
           env:
             REQUIREMENTS: $(requirements)
 
+        - pwsh: pip install -r "$env:REQUIREMENTS" --no-deps --upgrade
+          displayName: Install requirements without dependencies
+          env:
+            REQUIREMENTS: $(requirements)
+
+      - ${{ if eq(parameters.Daily, true) }}:
         - pwsh: |
             pip install -r "$env:REQUIREMENTS" --pre --no-deps --upgrade `
               --index-url https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-python/pypi/simple
 
           displayName: Install requirements from dev feed without dependencies
-          env:
-            REQUIREMENTS: $(requirements)
-
-      - ${{ if eq(parameters.Nightly, false) }}:
-        - pwsh: pip install -r "$env:REQUIREMENTS" --no-deps --upgrade
-          displayName: Install requirements from without dependencies
           env:
             REQUIREMENTS: $(requirements)
 
